[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemy.png" type="Texture" id=1]
[ext_resource path="res://EntityStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 10.5561, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 200, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Enemy" type="Node2D" groups=["enemy"]]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
mouse_filter = 2
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EntityStats" parent="." instance=ExtResource( 2 )]
position = Vector2( -31, 37 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 5 )
anims/attack = SubResource( 4 )
anims/die = SubResource( 6 )

[node name="Select" type="TextureButton" parent="."]
margin_left = -37.0
margin_top = -32.0
margin_right = 36.0
margin_bottom = 36.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Select" to="." method="_on_Select_mouse_entered"]
[connection signal="mouse_exited" from="Select" to="." method="_on_Select_mouse_exited"]
[connection signal="pressed" from="Select" to="." method="_on_TextureButton_pressed"]
